[gd_scene load_steps=13 format=3 uid="uid://dki3y7j6t1fbb"]

[ext_resource type="Script" path="res://MainMenu/main/menu.gd" id="1_skujw"]
[ext_resource type="PackedScene" uid="uid://cfkwttuuni07x" path="res://MainMenu/credits/credits_menu.tscn" id="3_0adp6"]
[ext_resource type="PackedScene" uid="uid://dsda2nbagxvit" path="res://MainMenu/options/options_menu.tscn" id="3_aw2jo"]
[ext_resource type="AudioStream" uid="uid://g8cqbv4a0d1k" path="res://Sound/Music/The Caretaker - Its just a burning memory (2016).mp3" id="4_p1mds"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_mrw8l"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_wn00m"]
sky_material = SubResource("ProceduralSkyMaterial_mrw8l")

[sub_resource type="Environment" id="Environment_nrln1"]
background_mode = 2
sky = SubResource("Sky_wn00m")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ifkqg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ku4pd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p7ouq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h3n2b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_arg1i"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_skujw")

[node name="Background" type="Node3D" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Background/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Background/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.98416)

[node name="WorldEnvironment" type="WorldEnvironment" parent="Background"]
environment = SubResource("Environment_nrln1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 96
text = "Game Title"

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="Start" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_ifkqg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ku4pd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_p7ouq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h3n2b")
theme_override_styles/focus = SubResource("StyleBoxEmpty_arg1i")
text = "Start"

[node name="Settings" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_ifkqg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ku4pd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_p7ouq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h3n2b")
theme_override_styles/focus = SubResource("StyleBoxEmpty_arg1i")
text = "Settings"

[node name="Credits" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_ifkqg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ku4pd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_p7ouq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h3n2b")
theme_override_styles/focus = SubResource("StyleBoxEmpty_arg1i")
text = "Credits"

[node name="Quit" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_ifkqg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ku4pd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_p7ouq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h3n2b")
theme_override_styles/focus = SubResource("StyleBoxEmpty_arg1i")
text = "quit"

[node name="Options_Menu" parent="." instance=ExtResource("3_aw2jo")]
visible = false

[node name="Credits_Menu" parent="." instance=ExtResource("3_0adp6")]
visible = false

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_p1mds")
volume_db = -8.37
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
